tests/Fixtures/views/errors/compile_error.tpl
<h1>This template is broken on purpose</h1>
{foreach $items as $item}
  <li>{$item}</li>
{* unterminated comment + missing /foreach
